--- a/script/command/help.man
+++ b/script/command/help.man
@@ -1,1 +1,1 @@
-Lists all player commands available for your privilege level or displays help for a specific command
+Lists all player commands available for your privilege level or displays an help messagey for a specific command
