--- a/script/command/root/defaultcc.man
+++ b/script/command/root/defaultcc.man
@@ -1,1 +1,2 @@
+[INT] Default-connected-clients
 Changes the minimal num of connected clients (0 == default, 0< == more clients displayed on serverlist then real clients)
