--- a/script/man/stats.man
+++ b/script/man/stats.man
@@ -1,2 +1,2 @@
-([INT] Clientnumber), ([STRING] Time = {total, monthly, weekly, dayly})
+([INT] Clientnumber), ([ARRAY] Time = {total, monthly, weekly, dayly})
 Get your/a player's total/game statistics.
